--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -88,6 +88,11 @@ hr {
   margin: 1.5rem 0 1rem;
 }
 
+.justify-right {
+  display: flex;
+  justify-content: flex-end;
+}
+
 .green-pill {
   padding: 0.5rem 1rem;
   background-color: var(--custom-green);
