--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -107,6 +107,10 @@ hr {
   margin: 1.5rem 0 1rem;
 }
 
+a {
+  text-decoration: none;
+}
+
 .justify-right {
   display: flex;
   justify-content: flex-end;
