--- a/src/assets/pill.css
+++ b/src/assets/pill.css
@@ -3,6 +3,7 @@
   color: var(--vt-c-text-light-1);
   border-radius: 1.25rem;
   border: none;
+  font-weight: bold;
   cursor: pointer;
   transition: var(--transition-time-1);
 }
